# granite-tools-api-demo

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOVER.md  README.md  bundle.sh  config.json  run.sh  test_e2e_api.mjs  test_parser.mjs
assets/: AppIcon.icns  build_icns.sh  make_transparent.py
prompts/: system.txt  tools.json  tools.txt
src/: chat.html  main.rs  tools.rs
