[package]
name = "granite-tools-api-demo"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible Tools API demo — granite-4-h-tiny function calling with SWE-agent compatible tools"

[dependencies]
wry = "0.50"
tao = "0.33"
muda = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
glob = "0.3"
rfd = "0.15"

[dev-dependencies]
tempfile = "3.27.0"
